--- a/tutoring/core/templates/core/reviews.html
+++ b/tutoring/core/templates/core/reviews.html
@@ -52,6 +52,9 @@
 
 {% block content %}
 <div class="container mt-5">
+    <div class="alert alert-primary text-center" role="alert">
+        Our courses open in 2025! Stay tuned.
+    </div>
     <div class="header">
         <h1>Course Reviews</h1>
         <p class="lead">Read what our students have to say about our courses.</p>
