--- a/tutoring/core/templates/core/home.html
+++ b/tutoring/core/templates/core/home.html
@@ -162,13 +162,13 @@ body {
 #hero {
     background: url("{% static 'images/hero.jpg' %}") no-repeat center center;
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
     color: rgb(20, 11, 11);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    
     padding: 20px;
     box-sizing: border-box;
 }
