--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <section id="hero" class="text-center">
-    <h1 class="hero-header"> North Wales Tuturing </h1>
+    <h1 class="hero-header"> North Wales Tutoring </h1>
     <div class="text-hero-background py-2 border rounded">
         <p class="lead text-dark my-2">Achieve academic excellence with personalised tutoring in Maths, Science, and more. Serving Gwynedd, Conwy, Denbighshire, and beyond.</p>
     </div>
@@ -47,7 +47,7 @@
             <h3 class="py-2">Science</h3>
             <p>Dive into the world of biology, chemistry, and physics with our expert tutors and state-of-the-art teaching methods.</p>
         </div>
-        <div class="col-md-12 col-lg-4  d-flex d-md-none ">
+        <div class="col-md-12 col-lg-4  d-block d-md-none ">
             <img src="{% static 'images/exam-preparation.jpg' %}" alt="Exam Preparation" style="width: 100%;height:200px; border-radius: 8px;">
             <h3 class="py-2">Exam Preparation</h3>
             <p>Excel in your GCSEs and A-Levels with strategic preparation courses and practice exams.</p>
